Refactored covered-files to instead be the common subdirectory to consider for covered files. Solidified some Markdown API. Added total to report.

--- a/tools/cov-compare/CMakeLists.txt
+++ b/tools/cov-compare/CMakeLists.txt
@@ -5,6 +5,7 @@ add_swift_executable(cov-compare
   YAMLWriter.cpp
   Utils.cpp
   main.cpp
+  LINK_LIBRARIES swiftBasic
   COMPONENT_DEPENDS support object profiledata "option" core)
 
 swift_install_in_component(compiler
