Removed most behavior from cov-compare and instead focused on cov2json

--- a/tools/cov2json/CMakeLists.txt
+++ b/tools/cov2json/CMakeLists.txt
@@ -1,8 +1,6 @@
 add_swift_executable(cov-compare
   ProfdataCompare.cpp
-  HTMLWriter.cpp
-  MarkdownWriter.cpp
-  YAMLWriter.cpp
+  JSONWriter.cpp
   Utils.cpp
   main.cpp
   LINK_LIBRARIES swiftBasic
